tests/cases/generics/ok/generic-function-declaration-policy.ari
fn marker_value[T](value: i64) -> i64 {
  value + 1
}

fn make_value[T]() -> T {
  return 9;
}

fn keep_with_marker[T, Marker](value: T) -> T {
  value
}

fn choose_first[A, B](left: A, right: B) -> A {
  return left;
}

fn main() -> i64 {
  let first = marker_value<i64>(4);
  let second = marker_value<bool>(5);
  let made = make_value<i64>();
  let kept = keep_with_marker<i64, bool>(8);
  let chosen = choose_first<i64, bool>(3, false);
  return first + second + made + kept + chosen;
}
