tests/cases/generics/errors/generic-function-unknown-type-arg.ari
fn identity[T](value: T) -> T {
  value
}

fn main() -> i64 {
  return identity<Missing>(1);
}
